# proto-reconstruction

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  main_vo.cpp
docs/: 0_SetupOpenCV.md  1_InitiaVisuallOdometry.md  2_Evaluation.md  3_Visualization.md  4_VisualOdometryElements_1.md  5_VisualOdometry_VisualizingMapPoints.md  6_VisualOdometry_Refactor.md  7_VisualOdometry_Refactor2.md
include/proto_recon/features/: feature_matcher.h
include/proto_recon/geometry/: pose_estimation.h
include/proto_recon/utils/: imagestream.h
include/proto_recon/visualization/: mapvisualizer.h  visualizer.h
include/proto_recon/vo/: frame.h  map.h  mappoint.h  vo.h
src/: CMakeLists.txt  main.cpp
src/features/: feature_matcher.cpp
src/geometry/: pose_estimation.cpp
src/utils/: imagestream.cpp
src/visualization/: mapvisualizer.cpp  visualizer.cpp
src/vo/: frame.cpp  map.cpp  mappoint.cpp  vo.cpp
